# pix2vec

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: 算法说明.md
include/: pix2vec.hpp
kernel/: pix2vec.cl
src/: pix2vec.cpp
test/: pix2vec_test.cpp
